--- a/public/css/template/theme-blue.css
+++ b/public/css/template/theme-blue.css
@@ -107,6 +107,7 @@ body {
   background: #f5f5f5 url('../../img/bg.png') left top repeat;
   position: relative;
   zoom: 1;
+  width: 100%;
 }
 .page-container .page-content:before,
 .page-container .page-content:after {
